test/asm/equs-recursion.out
ERROR: equs-recursion.asm(2):
    Recursion limit (64) exceeded
