test/asm/equs-recursion.asm
recurse EQUS "recurse "
recurse

; FIXME: also handle the following:
; recurse EQUS "recurse"
; recurse
